--- a/src/CongnitiveEye.Forms/App.xaml
+++ b/src/CongnitiveEye.Forms/App.xaml
@@ -6,5 +6,11 @@
     
     <Application.Resources>
         <!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="#464546"/>
+                <Setter Property="BarTextColor" Value="#ffffff"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
