--- a/src/CongnitiveEye.Forms/Views/ProjectTagsView.xaml
+++ b/src/CongnitiveEye.Forms/Views/ProjectTagsView.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:VMs="clr-namespace:CongnitiveEye.Forms.ViewModels"
     xmlns:Views="clr-namespace:CongnitiveEye.Forms.Views"
+    xmlns:Util="clr-namespace:CongnitiveEye.Forms.Utilities" 
     xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
     x:Class="CongnitiveEye.Forms.Views.ProjectTagsView"
     x:Name="thisProjectTagsView">
@@ -13,62 +14,129 @@
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
-        <flv:FlowListView
-            BackgroundColor="#DADFE1"
-            FlowColumnCount="1"
-            FlowItemsSource="{Binding Tags}"
-            FlowItemTappedCommand="{Binding OpenTag}"
-            HasUnevenRows="true">
+        
+        <Grid
+            RowSpacing="0">
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            
+            <!--Gutter-->
+            <ContentView
+                    ControlTemplate="{x:Static Util:Templates.GutterTemplate}" >
 
-            <flv:FlowListView.FlowColumnTemplate>
-                <DataTemplate>
-                         <Frame
-                            VerticalOptions="Fill"
+                <Grid Grid.Row="0"
+                  Margin="20"
+                  HorizontalOptions="Fill"
+                  VerticalOptions="Center">
+                
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid
+                        IsVisible="{Binding ShowInterations}"
+                        Margin="0,0,20,0">
+                        
+                        <Picker HeightRequest="45"
+                                WidthRequest="220"
+                                ItemsSource="{Binding Iterations}"
+                                ItemDisplayBinding="{Binding Name}"
+                                SelectedItem="{Binding SelectedIteration}"/>
+                        <Image
+                            Margin="15,0"
+                            WidthRequest="20"
+                            InputTransparent="true"
+                            Source="chevron_down.png"  
+                            HorizontalOptions="End"
+                            VerticalOptions="Center" />
+                    </Grid>
+                    
+                    <Button Grid.Column="1"
+                            HeightRequest="45"
+                            BackgroundColor="{x:Static Util:ColorUtil.TrainButtonColor}"
+                            TextColor="White"
+                            Text="Train"
+                            Command="{Binding ReTrain}" />
+                </Grid>
+            </ContentView>
+                
+           
+
+           
+            <!--Tag List-->
+            <flv:FlowListView
+                Grid.Row="1"
+                Margin="10"
+                FlowColumnCount="2"
+                RowHeight="80"
+                BackgroundColor="Transparent"
+                FlowItemsSource="{Binding Tags}"
+                FlowItemTappedCommand="{Binding OpenTag}"
+                HasUnevenRows="true">
+
+                <flv:FlowListView.FlowColumnTemplate>
+                    <DataTemplate>
+                        <ContentView
+                            ControlTemplate="{x:Static Util:Templates.TileTemplate}"
                             Margin="10"
-                            Padding="10">
-                            
-                            <Grid
-                                VerticalOptions="Fill">
+                            Padding="0">
                                 
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-<!--                                    <RowDefinition Height="Auto" />-->
-                                </Grid.RowDefinitions>
-                                
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
 
                                 <!--Project Name & Description-->
-                                <StackLayout Grid.Row="0" Grid.Column="0"
-                                    VerticalOptions="Center"
-                                    Orientation="Horizontal">
+                                <Grid
+                                    Margin="10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+
+                                    <StackLayout
+                                        Orientation="Horizontal"
+                                        Spacing="2">
+
+                                        <Label
+                                            Text="*"
+                                            IsVisible="{Binding IsNew}"
+                                            TextColor="{x:Static Util:ColorUtil.AccentTextColor2}"
+                                            LineBreakMode="TailTruncation"
+                                            VerticalOptions="Center"
+                                            HorizontalOptions="End"
+                                            FontSize="14"
+                                            FontAttributes="Bold"/>
+                                        
+                                        <Label
+                                            Text="{Binding Name}"
+                                            TextColor="{x:Static Util:ColorUtil.PrimaryTextColor}"
+                                            LineBreakMode="TailTruncation"
+                                            VerticalTextAlignment="Center"
+                                            VerticalOptions="Center"
+                                            FontSize="16"
+                                            FontAttributes="Bold"/>
+                                        
+                                    </StackLayout>
                                     
+
                                     <Label
-                                        Text="{Binding Name}"
-                                        VerticalOptions="Center"
-                                        FontSize="18"
-                                        FontAttributes="Bold"/>
-                                    
-                                    <Label
-                                        Text="{Binding ImageCount, StringFormat='({0} Photos Taken)'}"
+                                        Grid.Row="1"
+                                        Text="{Binding ImageCount, StringFormat='{0} Photos Taken'}"
+                                        LineBreakMode="TailTruncation"
+                                        TextColor="{x:Static Util:ColorUtil.SecondaryTextColor}"
                                         VerticalOptions="Center"
                                         FontSize="12"/>
-                                </StackLayout>
+                                  
                                 
-                                <!--<Label Grid.Row="1" Grid.Column="0"
-                                    Text="{Binding Description}"
-                                    FontSize="10"
-                                    TextColor="Gray"
-                                    LineBreakMode="WordWrap"/>-->
-                                    
-                               
-                            </Grid>
-                        </Frame>
-                </DataTemplate>
-            </flv:FlowListView.FlowColumnTemplate>
-        </flv:FlowListView>
+                                </Grid>
+
+                                   
+                            </ContentView>
+                    </DataTemplate>
+                </flv:FlowListView.FlowColumnTemplate>
+            </flv:FlowListView>
+        </Grid>
         
     </ContentPage.Content>
     
